--- a/species.html
+++ b/species.html
@@ -23,6 +23,22 @@
       <p>Iuncterra is home to a wide variety of sapient creatures.</p>
     </section>
     
+    <section id="fey" class="wiki-page">
+      <h1>Fey</h1>
+      <figure class="splashimg"><img
+          src="assets/species/fey.png" />
+      </figure>
+      <p>In the beginning, there were the fey.</p>
+      <p>The fey exist in a plane of reality paralel to Iuncterra, the material plane is a manifestation of 
+        their essence and so they are intimately linked to the natural world. More powerful fey are linked 
+        to fundamental forces of nature, for example all thunder and lightning is a manifestation of the essence 
+        of The Thunderer, whilst less powerful fey are linked to local phenomena. Most rivers, lakes, forests, 
+        mountains and volcanoes are associated with a specific fey.</p>
+      <p>Events in the fey realm affect the material plane, and events in the material plane affect the fey realm. 
+        If you were to cut down a forest, the associated fey would die too. Likewise, when a mountain fey is enraged, 
+        the mountain erupts in fire and molten rock. Fey can actively manifest in the material plane as physical beings, 
+        some choose to do so permenantly, but most prefer to exist solely in the fey realm most of the time.</p>
+    </section>
 
     <section id="iotun" class="wiki-page">
       <h1>Iotun</h1>
@@ -31,22 +47,19 @@
         Iuncterra.</p>
     </section>
 
-    <section id="fey" class="wiki-page">
-      <h1>Fey</h1>
-      <figure class="splashimg"><img
-          src="assets/species/fey.png" />
-      </figure>
-      <p>Immensely powerful beings with a deep connection to the natural world. It's oft remarked that the fey are
-        embodiments of natural
-        forces, but it's actually more accurate to describe natural forces as embodiments of the fey.</p>
-    </section>
+    
 
-    <section id="demon" class="wiki-page">
-      <h1>Demons</h1>
+    <section id="daemon" class="wiki-page">
+      <h1>Daemons</h1>
       <figure class="splashimg"><img
           src="assets/species/demon.png" />
       </figure>
-      <p></p>
+      <p>Where there is life, there are demons.</p>
+      <p>Daemons manifest from the thoughts, feelings and actions of sapient beings. Like the fey, they exist in 
+        a parallel reality, linked to the minds of sapient creates as the fey realm is to the natural world. The 
+        appearance, power and personality of any  given daemon comes from the concept they manifest from. For 
+        example, Surtr manifests from the will to destroy one's enemies, so takes the form of a vast roaring beast 
+        wreathed in flame.</p>
     </section>
 
     <section id="dragon" class="wiki-page">
@@ -54,9 +67,8 @@
       <figure class="splashimg"><img
           src="assets/species/dragon.webp" />
       </figure>
-      <p>Created by the union of demon and fey, dragons embody both the wonder of the natural world and the destructive
-        power of
-        Sundrheim.</p>
+      <p>Created by the union of daemon and fey, dragons embody both the wonder of the natural world and the destructive
+        power of greed.</p>
     </section>
 
     <section id="dracean" class="wiki-page">
@@ -64,9 +76,9 @@
       <figure class="splashimg"><img
           src="assets/species/dracean.png" />
       </figure>
-      <p>The proud sons and daughters of Drace descend directly from the great dragon Draconus, whose joining with the Iotun 
+      <p>The proud sons and daughters of Drace descend directly from the great dragon Draconus, whose joining with the iotun 
         maiden Mathixa produced many of the humanoid species'. Due to intense inbreeding in the Dracean Kingdom period, 
-        Draceans retain far more of their draconic physical attributes than other descendents of Draconus.</p>
+        draceans retain far more of their draconic physical attributes than other descendents of Draconus.</p>
     </section>
 
     <section id="orc" class="wiki-page">
@@ -74,7 +86,7 @@
       <figure class="splashimg"><img
           src="assets/species/orc.png" />
       </figure>
-      <p>Outside of the Eternal City of Drace, descendents of Draconus met and freely fell in love with Iotun. Over time, the 
+      <p>Outside of the Eternal City of Drace, descendents of Draconus met and freely fell in love with iotun. Over time, the 
         differences between these two species' became less distinct, until the majority of the population outside of Drace and 
         the iotun homelands in the North became altogether different from either ancestor species. Thus, orc came into being.</p>
     </section>
@@ -84,9 +96,9 @@
       <figure class="splashimg"><img
           src="assets/species/elf.png" />
       </figure>
-      <p>The ancestry of elves is hotly debated. Elven scholars would say that Elves came into being organically, that they 
-        are immutable facets of the world in the same way as Fey or Demons. However, in actuality, Elves evolved directly 
-        from Orc. Their faces and builds slimmed, their ears grew, but underneath they are still relatively similar.</p>
+      <p>The ancestry of elves is hotly debated. Elven scholars would say that elves came into being organically, that they 
+        are immutable facets of the world in the same way as Fey or Demons. However, in actuality, elves evolved directly 
+        from orc. Their faces and builds slimmed, their ears grew, but underneath they are still relatively similar.</p>
     </section>
 
     <section id="loxodon" class="wiki-page">
@@ -94,8 +106,8 @@
       <figure class="splashimg"><img
           src="assets/species/loxodon.png" />
       </figure>
-      <p>Native to what is now the Elven kingdom of Kashar, Loxodon are a people with deep and rich cultural history. Loxodonic 
-        legends tell of the first Loxodon being born to a Fey who fell in love with one of the early ancestors of the Orcish 
+      <p>Native to what is now the elven kingdom of Kashar, loxodon are a people with deep and rich cultural history. Loxodonic 
+        legends tell of the first loxodon being born to a fey who fell in love with one of the early ancestors of the orcish 
         people.
       </p>
     </section>
@@ -105,9 +117,8 @@
       <figure class="splashimg"><img
           src="assets/species/human.png" />
       </figure>
-      <p>Further away from Drace, iotun didn't encounter any Draceans and so didn't pick up any draconic traits. However, moving 
-        south required them to become smaller over time, sacrificing strength for a less intense calory requirement, eventually 
-        becoming modern humans.</p>
+      <p>Over time, iotun evolved to adapt to differing climates, becoming smaller an weaker, but more versatile and 
+        adaptable. These iotun eventually become modern humans.</p>
     </section>
 
     <section id="tabaxi" class="wiki-page">
@@ -115,7 +126,7 @@
       <figure class="splashimg"><img
           src="assets/species/tabaxi.png" />
       </figure>
-      <p>Much as Loxodon originated from the union of a Fey with a proto-Orc, Tabaxi originate from a Fey and a human. A much more 
+      <p>Much as loxodon originated from the union of a fey with a proto-Orc, Tabaxi originate from a fey and a human. A much more 
         recent species, tabaxi can be found in several regions of Iuncterra.</p>
     </section>
 
@@ -124,8 +135,8 @@
       <figure class="splashimg"><img
           src="assets/species/jotun.png" />
       </figure>
-      <p>The most direct descendents of ancient iotun, the jotun are a huge and strong people who inhabit most of the cold places of 
-        the world.</p>
+      <p>Not all iotun became small or weak. Those in the cold north remained large and powerful, their hardy constitution and 
+        tremendous strength allowing them to survive harsh winter climates.</p>
     </section>
 
     <section id="gandrite" class="wiki-page">
@@ -134,9 +145,9 @@
           src="assets/species/gandrite.png" />
       </figure>
       <p>Far in the northern reaches of Iunterra, past the forgotten hills to the frozen north where only a handful of particularly hardy 
-        jotun dare to dwell, lies a portal to Gandrfel. Through circumstances lost to history, a child was born of a jotun and a demon; the 
-        first gandrite. Gandrites posess only a small fraction of the power of their demonic ancestors, but being able to multiply makes 
-        them formiddable. Their numbers grow every day.</p>
+        jotun dare to dwell, lies a portal to the daemon realm. Through circumstances lost to history, a child was born of a jotun and a daemon; the 
+        first gandrite. Gandrites posess only a small fraction of the power of their daemonic ancestors, but being able to multiply makes 
+        them formiddable. As the world slumbers, their numbers grow.</p>
     </section>
 
   </main>
