Fix broken image ref

--- a/species.html
+++ b/species.html
@@ -52,7 +52,7 @@
     <section id="daemon" class="wiki-page">
       <h1>Daemons</h1>
       <figure class="splashimg"><img
-          src="assets/species/demon.png" />
+          src="assets/species/daemon.png" />
       </figure>
       <p>Where there is life, there are demons.</p>
       <p>Daemons manifest from the thoughts, feelings and actions of sapient beings. Like the fey, they exist in 
