--- a/species.html
+++ b/species.html
@@ -29,7 +29,7 @@
       <figure class="splashimg"><img
           src="assets/species/fey.png" />
       </figure>
-      <p>In the beginning, there were the fey.</p>
+      <blockquote>In the beginning were the fey.</blockquote>
       <p>The fey exist in a plane of reality paralel to Iuncterra, the material plane is a manifestation of 
         their essence and so they are intimately linked to the natural world. More powerful fey are linked 
         to fundamental forces of nature, for example all thunder and lightning is a manifestation of the essence 
@@ -56,7 +56,7 @@
       <figure class="splashimg"><img
           src="assets/species/daemon.png" />
       </figure>
-      <p>Where there is life, there are daemons.</p>
+      <blockquote>Where there is life, there are daemons.</blockquote>
       <p>Daemons manifest from the thoughts, feelings and actions of sapient beings. Like the fey, they exist in 
         a parallel reality, linked to the minds of sapient creates as the fey realm is to the natural world. The 
         appearance, power and personality of any  given daemon comes from the concept they manifest from. For 
