Add phylogenic tree and general species improvements

--- a/species.html
+++ b/species.html
@@ -11,6 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
   <script src="scripts/markdown.js"></script>
   <script src="scripts/maps.js"></script>
+  <script src="https://unpkg.com/@phylocanvas/phylocanvas.gl@latest/dist/bundle.min.js"></script>
 </head>
 
 
@@ -19,6 +20,7 @@
 
   <main>
     <section class="wiki-page">
+      <img class="fullwidth" src="assets/species/phylotree.svg"/>
       <ol id="contents"></ol>
       <p>Iuncterra is home to a wide variety of sapient creatures.</p>
     </section>
@@ -56,7 +58,7 @@
       <figure class="splashimg"><img
           src="assets/species/daemon.png" />
       </figure>
-      <blockquote>Where there is life, there are daemons.</blockquote>
+      <blockquote>Where there is thought, there are daemons.</blockquote>
       <p>Daemons manifest from the thoughts, feelings and actions of sapient beings. Like the fey, they exist in 
         a parallel reality, linked to the minds of sapient creates as the fey realm is to the natural world. The 
         appearance, power and personality of any  given daemon comes from the concept they manifest from. For 
@@ -69,8 +71,13 @@
       <figure class="splashimg"><img
           src="assets/species/dragon.webp" />
       </figure>
-      <p>Created by the union of daemon and fey, dragons embody both the wonder of the natural world and the destructive
-        power of greed.</p>
+      <p>All dragons are born of Avikath, daemon of greed. As mortal greed draws gold-hungry miners to the mountains, so 
+        too is Avikath drawn to mountain fey. Dragons embody her greed and apetite for destruction, as well as the 
+        awe-inspiring wonder and magic of their fey fathers. They vary in size and power according to the relative power 
+        of their fey father - larger mountains are home to larger dragons.</p>
+      <p>In the present day, dragons are a rare sight in most of the world. Avikath has not ventured from the daemon 
+        realm for thousands of years, so as long lived as dragons are, without new dragons being created their numbers 
+        have slowly declined from encounters with mortal hunters.</p>
     </section>
 
     <section id="dracean" class="wiki-page">
