Add some daemon lore

--- a/species.html
+++ b/species.html
@@ -56,7 +56,7 @@
       <h1>Daemons <a class="suffix ipa">deɪmɒnz</a></h1>
       
       <figure class="splashimg"><img
-          src="assets/species/daemon.png" />
+          src="assets/people/zukothoth.png" />
       </figure>
       <blockquote>Where there is thought, there are daemons.</blockquote>
       <p>Daemons manifest from the thoughts, feelings and actions of sapient beings. Like the fey, they exist in 
@@ -69,15 +69,15 @@
     <section id="dragon" class="wiki-page">
       <h1>Dragons <a class="suffix ipa">drægənz</a></h1>
       <figure class="splashimg"><img
-          src="assets/species/dragon.webp" />
+          src="assets/people/avikath.png" />
       </figure>
       <p>All dragons are born of Avikath, daemon of greed. As mortal greed draws gold-hungry miners to the mountains, so 
         too is Avikath drawn to mountain fey. Dragons embody her greed and apetite for destruction, as well as the 
         awe-inspiring wonder and magic of their fey fathers. They vary in size and power according to the relative power 
         of their fey father - larger mountains are home to larger dragons.</p>
-      <p>In the present day, dragons are a rare sight in most of the world. Avikath has not ventured from the daemon 
-        realm for thousands of years, so as long lived as dragons are, without new dragons being created their numbers 
-        have slowly declined from encounters with mortal hunters.</p>
+      <p>In the present day, dragons are a rare sight in most of the world. Avikath has not given birth for thousands of 
+        years, so as long lived as dragons are, without new dragons being created their numbers have slowly declined from 
+        encounters with increasingly well equipped mortal hunters.</p>
     </section>
 
     <section id="dracean" class="wiki-page">
