--- a/people.html
+++ b/people.html
@@ -19,6 +19,52 @@
 
     <main>
         <section class="wiki-page">
+          <ol id="contents"></ol>
+        </section>
+
+        <section id="daemons" class="wiki-page">
+          <h1>Daemons</h1>
+
+          <h2>Avikath <a class="suffix ipa">ævikæθ</a></h2>
+          <i class="sub">Daemon of Greed</i>
+          <figure class="splashimg">
+            <img src="assets/people/avikath.png" />
+          </figure>
+          <p>Avikath is manifest from the greed of mortals. All who lust for gold, power, sexual conquest... These are her people.</p>
+          <p>In physical form, she manifests as a draconic figure, her scales made of pure gold, her body of coal. She dresses in pauper's 
+            rags, tattered scraps of leather ill befitting a gleaming visage of wealth such as she.</p>
+          <p>Avikath accepts the title <i>Mother of Dragons</i>, as all dragons in Iuncterra were birthed by her. As greed draws mortals to 
+          the mountains in search of hiddent riches, Avikath is drawn to mountain fey. It is her union with these fey which produces dragons.</p>
+          <p>Avikath has not given birth for several millenia, her attention in more recent years being drawn to the ever more ravenous greed of 
+            mortal rulers, them having developed a taste for acrueing obscene wealth. Without her dalliances with the mountain fey, dragon numbers 
+            are dwindling as they cannoy reproduce of their own accord.</p>
+
+          <h2>Surtr <a class="suffix ipa">sɜtɜ</a></h2>
+          <i class="sub">Daemon of Destrucive Intent</i>
+          <figure class="splashimg">
+            <img src="assets/people/surtr.png" />
+          </figure>
+          <p>Surtr is, plain and simple, the will to destroy. Motives are irrelevant, whether the destruction comes from righteous anger, from 
+            vengeance, from greed... So long as there is a mortal who wishes to see some one or some thing in ruins, Surtr will retain his power.</p>
+          <p>Surtr has fought under many daemon generals, but he owes allegience to none. He is happy to march to the banner of whomever looks set 
+            to strew the greatest destruction.</p>
+          <p>Once, when dragons ruled the skies and the mortal creatures of Iuncterra were vast wild beasts, Surtr was fully unchained. However, 
+            destruction does not always serve the interests of his fellow daemons - making a deal with fey of the fertile lands where mortals would 
+            later cultivate the soil and thrive, she crafted a muzzle for Surtr's snout which holds him back from unleashing utter anihilation upon 
+            the world.</p>
+          
+            <h2>Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h2>
+            <i class="sub">Daemon of Masochism</i>
+            <figure class="splashimg">
+              <img src="assets/people/zukothoth.png" />
+            </figure>
+            <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we deserve punishment, 
+              not for any particular wrong doing but simply by virtue of our being. That whatever dreadful fate we are doomed to endure is entirely 
+              just and, in fact, what's best for us.</p>
+            <p>Since the Uthgardt age, Zukothoth has been trapped in the material plane, at the base of Beorunna's Well. There at the cold edge of 
+              the world he whispers in the ears of any foolish enough to enter the haunted ruins, begging them to help him, to release him, to help 
+              him bring the end that all mortals secretly crave.</p>
+
         </section>
     </main>
     
