--- a/people.html
+++ b/people.html
@@ -25,7 +25,7 @@
         <section id="daemons" class="wiki-page">
           <h1>Daemons</h1>
 
-          <h2>Avikath <a class="suffix ipa">ævikæθ</a></h2>
+          <h2 id="Avikath">Avikath <a class="suffix ipa">ævikæθ</a></h2>
           <i class="sub">Daemon of Greed</i>
           <figure class="splashimg">
             <img src="assets/people/avikath.png" />
@@ -39,7 +39,7 @@
             mortal rulers, them having developed a taste for acrueing obscene wealth. Without her dalliances with the mountain fey, dragon numbers 
             are dwindling as they cannoy reproduce of their own accord.</p>
 
-          <h2>Surtr <a class="suffix ipa">sɜtɜ</a></h2>
+          <h2 id="surtr">Surtr <a class="suffix ipa">sɜtɜ</a></h2>
           <i class="sub">Daemon of Destrucive Intent</i>
           <figure class="splashimg">
             <img src="assets/people/surtr.png" />
@@ -49,21 +49,21 @@
           <p>Surtr has fought under many daemon generals, but he owes allegience to none. He is happy to march to the banner of whomever looks set 
             to strew the greatest destruction.</p>
           <p>Once, when dragons ruled the skies and the mortal creatures of Iuncterra were vast wild beasts, Surtr was fully unchained. However, 
-            destruction does not always serve the interests of his fellow daemons - making a deal with fey of the fertile lands where mortals would 
-            later cultivate the soil and thrive, she crafted a muzzle for Surtr's snout which holds him back from unleashing utter anihilation upon 
+            destruction does not always serve the interests of his fellow daemons... Making a deal with fey of the fertile lands where mortals would 
+            later cultivate the soil and thrive, <a href="#avikath">Avikath</a> crafted a muzzle for Surtr's snout which holds him back from unleashing utter anihilation upon 
             the world.</p>
           
-            <h2>Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h2>
-            <i class="sub">Daemon of Masochism</i>
-            <figure class="splashimg">
-              <img src="assets/people/zukothoth.png" />
-            </figure>
-            <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we deserve punishment, 
-              not for any particular wrong doing but simply by virtue of our being. That whatever dreadful fate we are doomed to endure is entirely 
-              just and, in fact, what's best for us.</p>
-            <p>Since the Uthgardt age, Zukothoth has been trapped in the material plane, at the base of Beorunna's Well. There at the cold edge of 
-              the world he whispers in the ears of any foolish enough to enter the haunted ruins, begging them to help him, to release him, to help 
-              him bring the end that all mortals secretly crave.</p>
+          <h2 id="zukothoth">Zukothoth <a class="suffix ipa">zukəʊtɒθ</a></h2>
+          <i class="sub">Daemon of Masochism</i>
+          <figure class="splashimg">
+            <img src="assets/people/zukothoth.png" />
+          </figure>
+          <p>Zukothoth is the desire we all keep buried to do dreadful and grevious harm to ourselves. The feeling that we deserve punishment, 
+            not for any particular wrong doing but simply by virtue of our being. That whatever dreadful fate we are doomed to endure is entirely 
+            just and, in fact, what's best for us.</p>
+          <p>Since the Uthgardt age, Zukothoth has been trapped in the material plane, at the base of Beorunna's Well. There at the cold edge of 
+            the world he whispers in the ears of any foolish enough to enter the haunted ruins, begging them to help him, to release him, to help 
+            him bring the end that all mortals secretly crave.</p>
 
         </section>
     </main>
