Include h2 in contents

--- a/species.html
+++ b/species.html
@@ -19,7 +19,7 @@
 
   <main>
     <section class="wiki-page">
-      <ol id="contents"></ol>
+      <ul id="contents"></ul>
       <p>Iuncterra is home to a wide variety of sapient creatures.</p>
     </section>
 
