--- a/people.html
+++ b/people.html
@@ -7,7 +7,7 @@
     <title>Iuncterra</title>
     <link rel="stylesheet" href="style/stylesheet.css" type="text/css" />
     <link rel="stylesheet" href="style/torillic.css" type="text/css" />
-    <script src="scripts/populate.js"></script>
+    <script src="scripts/utils.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/11.0.0/markdown-it.min.js"></script>
     <script src="scripts/markdown.js"></script>
     <script src="scripts/maps.js"></script>
