--- a/locations.html
+++ b/locations.html
@@ -25,6 +25,136 @@
       </hex-grid>
     </div>
     <section class="wiki-page">
+      <div id="contents"></div>
+    </section>
+    <section class="wiki-page">
+      <h1 id="kashar">Kashar</h1>
+      <p class="fullwidth">The Kashar Sultanate is a major power in the southern continent, ruling over a vast area rich in spices,
+        precious metals and fine silks. The ruling family of Kashar are the Kash dynasty, an elven family whose rule
+        dates back over 10,000 years. Most citizens of Kashar are <a href=species.html#elves>elves</a>, but there are
+        also singificant populations of <a href=species.html#loxodon>loxodon</a> and <a
+          href=species.html#tabaxi>tabaxi</a>.</p>
+
+      <h2 id="kashar-governance">Governance</h2>
+      <h4>The Sultan</h4>
+      <p>The Sultan is the absolute ruler of all Kashar - while there are devolved governments and some democratic
+        representation, if the Sultan passes a dictate then it is so. No questions. Upon the Sultan's death, the title
+        passes to their most legitimate heir. Usually this is the eldest child of the Celebrated Concubine, but
+        ultimately the decision as to which child is the decision of the Sultan while alive. While there have been some
+        instances of the title passing to siblings, niblings and cousins, every Sultan has been able to trace their
+        lineage directly back to the progenitor of the Kash dynasty.</p>
+      <h4>The Visir</h4>
+      <p>The most senior rank attainable without royal blood, the Visir is appointed directly by the Sultan to advise
+        them on matters of state. In absence of the Sultan, for example when on campaign in foreign lands, the Visir can
+        interpret the Sultan's will and even pass their own dictates. In instances where a Sultan has died without
+        naming an heir, and while the Celebrated Mother is no longer alive, the decision on who is the most legitimate
+        heir falls solely on the Visir. The Sultan also assigns the Visir an apprentice, the Cirak Visir, to train in
+        the art of statecraft and succeed the Visir should anything happen to them.</p>
+      <h4>The Vilayetti</h4>
+      <p>The Vilayetti are the closest thing in Kashar to a check on the Sultan's power. They are the governors of each
+        Jami in the Sultanate, excluding the capital, who meet every other month to discuss matters of state and
+        evaluate the dictates passed by the Sultan since the last meeting. While their decisions can ultimately be
+        overridden by the Sultan, a Sultan who does so too often will be seen as tyrannical by the people, so it is
+        often in their interest to listen to the Vilayetti and their amendments often pass.</p>
+      <h4>Local Government</h4>
+      <p>Each province (Jami) of Kashar has an elected governor, who manages the day to day running of the Jami and
+        represents the people in the Vilayetti. The governor for the capital city is the Visir.</p>
+      <h4>The Sultan's Harem</h4>
+      <p>While the Sultan traditionally maintains a harem of concubines, one is recognised by the state as the
+        Celebrated Concubine, the children of this concubine are considered the most legitimate successors to the
+        Sultan. While it is rare, concubines can be promoted and demoted at the whim of the Sultan, if they were to
+        disgrace the family or offend the Sultan in some way. Concubines are recruited and appointed by the Celebrated
+        Mother while she is alive, or by the Celebrated Concubine if not. If a Celebrated Concubine has not yet been
+        appointed and the Celebrated Mother is no longer alive, the Sultan chooses their concubines directly. </p>
+
+      <h2 id="kashar-geography">Geography</h2>
+      <p>Kashar is built around the mouth of the river Jibana, sandwiched between the Parbat mountain range marking the
+        southern border of a great desert, and the Satru mountains marking the western borders of <a
+          href="#ordoatkan">Ordo'Atkan</a>.</p>
+      <p>The lands are split into five regions, known as Jami, each with its own regional government:</p>
+      <h4>Jami-Urbara</h4>
+      <p>The main source of food in the region; shallow capillary rivers split the land in this region, flooding and
+        receeding in an extremely consistent pattern which the locals have learned to utilise to grow vast quantities of
+        high quality crops.</p>
+      <h4>Jami-Sonna</h4>
+      <p>The trade hub of Kashar, Jami-Sonna makes up the Kashar-controlled portion of the Skeleton Coast. As the most
+        accessible part of the Sultanate by ship, Jami-Sonna is absolutely essential to the Sultanate's maritime trade
+        network.</p>
+      <h4>Jami-Satru</h4>
+      <p>The first region colonised by Elves during the nameless wars, Jami Satru covers the southeast border of the
+        Sultanate and is a stronghold for royalists. Citizens of Jami-Satru man the outposts in the Satru mountain
+        range, where their ancestors once crossed into the then-Loxodon controlled region.</p>
+      <h4>Jami-Parbat</h4>
+      <p>This isolated mountainous region is the ancestral homeland of Kashar's tabaxi population. While its rocky
+        slopes are near impossible to farm, it is excellent hunting ground and many of the Sultan's luxurious furs are
+        sourced from this region.</p>
+      <h4>Jami-Marub</h4>
+      <p>While the whole of Kashar was populated by loxodon when the elves arrived, Jami-Marub is believed to be the
+        first land of the loxodon people, and holds great cultural and religious significance for them. Situated around
+        a break in the Parbat mountains, this region is often called the "gateway to the desert" and is by far the most
+        hospitable point of access to the desert from the south.</p>
+      <p>The capital city of Kashar, Dhurga-Agun, functions as an autonomous region independent from the five Jami,
+        governed direcly by the Visir.</p>
+
+      <h2 id="kashar-military">Military</h2>
+      <p>Unlike other monarchies, the Kasharite military is not regional and all troops are loyal directly to the
+        Sultan, not to regional governors. The army is commanded by Pashas, high ranking generals who each control a
+        unit of mixed troops.</p>
+      <p>The troops themselves fall into three groups:</p>
+      <h4>Piyad</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/piyad.png"></figure>
+      <p>Basic infantry unit, comprising the bulk of the Kasharite army. Primarily use a bladed spear called a fauchard,
+        but carry a dagger for close combat.</p>
+      <h4>Hussar</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/hussar.png"></figure>
+      <p>Mounted cavalry unit, forms the front guard in military combat. Uses a reinforced fauchard from horseback, also
+        carries a crescent shield. Excellent for hitting fast and hard right away, but their usefulness tapers off in
+        long battles.</p>
+      <h4>Janissary</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/janissary.png"></figure>
+      <p>Elite fighers, the jewel of the Kashar military. These highly trained, disciplined veterans are feared and
+        respected across the sub-Spessartine region. While their numbers are small, their high level of skill makes them
+        a formidable force.</p>
+
+      <h2 id="kashar-language">Language</h2>
+      <p>Kashar is a multi-lingual region, home to several dozen different languages from as many as 5 distinct language
+        families. The language of state business, thus the main language spoken in the capital city and by the royal
+        family, is Kalish.</p>
+      <p>Below is the motto of the Kash dynasty written in Kalish</p>
+      <blockquote>
+        <p>:আনন্দের মধ্যে শক্তি আছে।</p>
+        <p>There is power in pleasure.</p>
+      </blockquote>
+
+      <h2 id="kashar-religion">Religion</h2>
+      <p>The state religion of Kashar, Sikari, is deeply rooted in the local history of the region. Followers worship local patron deities and rever the Eternal Flame, a magical fire housed in Durga-Agun atop a vast tower, burning in a vast metal dish full of oil. The flame has been burning since the founding of Kashar by the first Sultan and represents the strength and stability of the Kash dynasty. The fire is near impossible to extinguish, once lit any fuel will burn to ashes regardless of any attempt to put the fire out.</p>
+      <p>The faith has three roles:</p>
+      <h4>Brahman</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/brahman pranja.png" /></figure>
+      <p>The leader of the faith, advises the Sultan on spiritual matters and administers the Sikari faith.</p>
+      <h4>Herbad</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/herbad.png" /></figure>
+      <p>Herbadi are keepers of the flame, who generally perform the day to day maintenance such as adding oil and tower maintenance.</p>
+      <h4>Mobad</h4>
+      <figure class="splashimg"><img src="assets/locations/kashar/mobad.png" /></figure>
+      <p>Mobadi are trainee keepers of the flame, learning the ancient rituals from Herbadi.</p>
+      
+      <h2 id="kashar-history">History</h2>
+      <h4>The Nameless Wars</h4>
+      <p>Before it was an elven Sultanate, the land now called Kashar was a land of <a href="species.html#loxodon">loxodon</a>. It is known that the land was taken from them and the Sultanate established when the region was colonised by ancient elves, but little else is known of this period. Despite its violent colonial beginnings, <a href="species.html#loxodon">loxodon</a> now live freely in Kashar and consider themselves as much Kasharites as their elven countrymen, the conflicts of those times long forgotten.</p>
+      <h4>The Lost Prince</h4>
+      <p>During the reign of the Sultan Gaabith, his Celebrated Concubine, Aadit, mother of the heir, was stripped of her status and relegated to a basic concubine. This came after her husband learned of her affair with a djinn, a fey of the desert, after the child expected to be crown Prince was born a demi-fey. It is not known what became of the child, upon Gaabith's death the sultanate passed to Bhangiya, son of the Celebrated Concubine who took Aadit's place. Some in Kashar believe the child lives still, destined to return and claim their throne some day.</p>
+
+      <h2 id="kashar-notable-figures">Notable Figures</h2>
+      <ul>
+        <li><a href="people.html#kash-pasanhara">Kash Pasanhara</a></li>
+        <li><a href="people.html#caritra-dhurta">Caritra Dhurta</a></li>
+        <li><a href="people.html#pranja">Pranja</a></li>
+        <li><a href="people.html#kash-anandera">Kash Anandera</a></li>
+        <li><a href="people.html#kash-suraska">Kash Suraska</a></li>
+        <li><a href="people.html#unna-kausala">Unna Kausala</a></li>
+        <li><a href="people.html#baal-adhikari">Baal Adhikari</a></li>
+      </ul>
     </section>
   </main>
 
