--- a/locations.html
+++ b/locations.html
@@ -130,7 +130,7 @@
       <p>The state religion of Kashar, Sikari, is deeply rooted in the local history of the region. Followers worship local patron deities and rever the Eternal Flame, a magical fire housed in Durga-Agun atop a vast tower, burning in a vast metal dish full of oil. The flame has been burning since the founding of Kashar by the first Sultan and represents the strength and stability of the Kash dynasty. The fire is near impossible to extinguish, once lit any fuel will burn to ashes regardless of any attempt to put the fire out.</p>
       <p>The faith has three roles:</p>
       <h4>Brahman</h4>
-      <figure class="splashimg"><img src="assets/locations/kashar/brahman pranja.png" /></figure>
+      <figure class="splashimg"><img src="assets/locations/kashar/brahman.png" /></figure>
       <p>The leader of the faith, advises the Sultan on spiritual matters and administers the Sikari faith.</p>
       <h4>Herbad</h4>
       <figure class="splashimg"><img src="assets/locations/kashar/herbad.png" /></figure>
