Contents should be a ul

--- a/locations.html
+++ b/locations.html
@@ -25,7 +25,7 @@
       </hex-grid>
     </div>
     <section class="wiki-page">
-      <div id="contents"></div>
+      <ul id="contents"></ul>
     </section>
     <section class="wiki-page">
       <h1 id="kashar">Kashar</h1>
