--- a/people.html
+++ b/people.html
@@ -19,7 +19,7 @@
 
     <main>
         <section class="wiki-page">
-          <ol id="contents"></ol>
+          <ul id="contents"></ul>
         </section>
 
         <section id="daemons" class="wiki-page">
